# wasm-net

./: .gitignore  README.md  flake.nix
calculator/: Cargo.toml
calculator/src/: bindings.rs  lib.rs
calculator/wit/: world.wit
networking/: README.md
networking/client_core/: Cargo.toml
networking/client_core/src/: lib.rs
networking/client_core/wit/: packets.wit  world.wit
networking/network-test/: cargo.toml
networking/network-test/src/: build.zig  client_networking.rs  host_networking.rs  lib.rs  main.rs  state.rs  test_networking.rs
networking/network-test/src/bindings/: example.cpp  example_cpp.h
networking/network-test/src/protocols/: constants.rs  mod.rs
networking/networking_core/: Cargo.toml
networking/networking_core/wit/: world.wit
networking/server_core/: Cargo.toml
networking/server_core/src/: lib.rs
networking/server_core/wit/: packets.wit  world.wit
wasm-net-demo/: Cargo.toml  flake.nix
wasm-net-demo/add/: Cargo.toml
wasm-net-demo/src/: lib.rs
wasm-net-demo/test/: Cargo.toml
wasm-net-demo/test/src/: main.rs
wasm-net-demo/tests/wit-components/: wit_interface_test.rs
wasm-net-demo/wit/: addr.wit
wasm-net-demo/wit-out/: component.wit
webgpu/: README.md
webgpu/components/: Cargo.toml
webgpu/components/src/: bindings.rs  lib.rs
webgpu/compose-wac/: primatives_linker.wat  renderer_linker.wat
webgpu/gpu_stub/: cargo.toml
webgpu/gpu_stub/src/: lib.rs
webgpu/primitives/: Cargo.toml
webgpu/primitives/src/: bindings.rs  lib.rs
webgpu/renderer/: Cargo.toml
webgpu/renderer/src/: lib.rs  render_config.rs
webgpu/tests/: cargo.toml  primitives.wasm
webgpu/tests/src/: async_vec_tests.rs  main.rs  state.rs  test_components.rs  test_primitives.rs
webgpu/wit/: world.wit
webgpu/wit/primitives/: world.wit
