[package]
name = "calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "docs:calculator"

[package.metadata.component.target.dependencies]
"docs:adder" = { path = "../add/wit" }