

[package]
name = "networking_client"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }
wasi = "0.12.0"
bincode = { version = "2.0.1", features = ["std"] }
lz4_flex = "0.11.5"
rand = "0.9.2"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:networking-client"
target.package = "component:networking-client"
target.version = "0.1.0"
target.world = "client-rust"


[package.metadata.component.dependencies]