

[package]
name = "networking_core"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.43.0", features = ["bitflags"] }
wasi = "0.12.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:networking-core"
target = "component:networking-core@0.1.0"

[package.metadata.component.dependencies]