[package]
name = "components"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }

[package.metadata.component]
package = "engine:components"

[lib]
crate-type = ["cdylib"]

[package.metadata.component.target]
path = "../wit/engine/components/0.1.0"
world = "components"

[package.metadata.component.target.dependencies]
"math:vec" = { path = "../wit/math/vec/0.1.0" }

[package.metadata.component.dependencies]
