[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[target.wasm32-wasip2]
rustflags = [
  "-C", "link-arg=libgpu_stub.a",
  "-C", "link-arg=--allow-undefined"
]

[dependencies]
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }
libc = "0.2"

[package.metadata.component]
package = "wgpu:renderer"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.component.target]
path = "../wit/deps/wgpu-renderer"
world = "renderer"

[package.metadata.component.target.dependencies]
"math:vec" = { path = "../wit/deps/engine-components/deps/math-vec" }
